--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -35,6 +35,9 @@ jobs:
         NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID: ${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID }}
       run: npm run build
 
+    - name: Export static files
+      run: npm run export
+
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
