--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -24,6 +24,8 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_REPOSITORY: neerajdhurandher/daily-tracker
     steps:
       - name: Checkout
         uses: actions/checkout@v4
