add prop-types lib

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build": "next build",
     "start": "next start",
     "export": "next export"
-
   },
   "dependencies": {
     "firebase": "^11.5.0",
     "next": "latest",
+    "prop-types": "^15.8.1",
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "^7.4.0",
