update repo name in yml

--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_ACTIONS : true
-      GITHUB_REPOSITORY: neerajdhurandher/daily-tracker
+      GITHUB_REPOSITORY: ${{ github.repository }}
     steps:
       - name : Check GITHUB_ACTIONS
         run: echo "GITHUB_ACTIONS= $GITHUB_ACTIONS"
